Dark Mode managed via Cookies + fixes + code clean

--- a/public/pages/races/races.css
+++ b/public/pages/races/races.css
@@ -154,3 +154,9 @@
   text-transform: capitalize;
   transition: 3000ms;
 }
+
+@media screen and (max-width: 967px) {
+  #racesBox {
+    order: 2;
+  }
+}
